--- a/contrib/debian/manpages/ellerium.conf.5
+++ b/contrib/debian/manpages/ellerium.conf.5
@@ -1,4 +1,4 @@
-.TH AMS.CONF "5" "January 2011" "ellerium.conf 3.19"
+.TH ELP.CONF "5" "January 2011" "ellerium.conf 3.19"
 .SH NAME
 ellerium.conf \- ellerium configuration file
 .SH SYNOPSIS
